# LLMOps

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_tests.txt
.github/workflows/: codecheck.yaml  rag_eval.yaml  tests.yaml
data/: corpus_reference.jsonl  documents_longs.jsonl  faq_service_client.jsonl
monitoring/: alertes.yml  docker-compose.yml  prometheus.yml
scripts/: check_no_model_weights.sh
src/: modele.py  tokeniseur.py
src/api/: app.py
src/evaluation/: evaluer_rag.py  jeu_evaluation.jsonl  rapport_eval.json
src/monitoring/: analyse_derive.py
src/rag/: base_connaissance.py  chunking.py  pipeline.py  recherche.py  reranking.py
tests/: test_chunking.py  test_modele.py  test_rag.py  test_tokeniseur.py
