[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llmops-rag"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["transformers.*", "torch.*", "sentence_transformers.*", "chromadb.*", "evidently.*", "langfuse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/monitoring/*", "src/api/*"]

[tool.coverage.report]
show_missing = true
